# latch

./: .clang-format  .gitignore  .project  CMakeLists.txt  azure-pipelines.yml  conanfile.txt  latch.h  latch.hpp  latch_darwin.cpp  latch_darwin.h  latch_darwin.hpp  latch_linux.cpp  latch_pthread.cpp  latch_test.cpp  latch_windows.cpp  mkdocs.yml  readme.md  requirements.txt
azure/: steps-mac.yml  steps-ubuntu.yml  steps-win-llvm.yml  steps-win-vs.yml
docs/: Doxyfile
scripts/: build-vs2017-cmake-clang.bat  build-vs2019-cmake-clang.bat  install-libcxx.sh
